Field/annotation groups to custom props.